--- a/assets/css/green-hedge.less
+++ b/assets/css/green-hedge.less
@@ -2700,7 +2700,7 @@
 }
 
 .div-block-370:hover {
-  background-color: #fff;
+  background-color: #001425c9;
   box-shadow: 0 0 0 0 #888;
   color: #001425;
 }
