--- a/assets/css/green-hedge.less
+++ b/assets/css/green-hedge.less
@@ -5125,7 +5125,9 @@
   -ms-flex-align: center;
   align-items: center;
 }
-
+.blog_overlap_heading:hover {
+  background-color: rgba(0, 0, 0, 0.322);
+}
 .setails-wrapper {
   display: -ms-grid;
   display: grid;
