Competition page UI

--- a/assets/css/arch-shelf.less
+++ b/assets/css/arch-shelf.less
@@ -5145,6 +5145,7 @@
   grid-template-columns: 35px 1fr;
   -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
+  justify-items: start;
 }
 
 .setails-wrapper._2 {
@@ -6236,6 +6237,10 @@
   .container {
     padding-right: 20px;
     padding-left: 20px;
+  }
+  .grid-container {
+    display: flex !important;
+    flex-direction: column;
   }
 
   .top-container {
@@ -9847,3 +9852,14 @@
 //   font-style: normal;
 //   font-display: swap;
 // }
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: 75%;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  font-size: 30px;
+  text-align: center;
+}
