--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -5,7 +5,7 @@
 @import './theme/commons.less';
 @import './normalize.less';
 @import './webflow.less';
-@import './green-hedge.less';
+@import './arch-shelf.less';
 // body {
 //   background-color: red !important;
 // }
