Get competition call

--- a/assets/css/arch-shelf.less
+++ b/assets/css/arch-shelf.less
@@ -5125,8 +5125,8 @@
   -ms-flex-align: center;
   align-items: center;
 }
-.blog_overlap_heading:hover {
-  background-color: rgba(0, 0, 0, 0.322);
+.blog_overlap_heading {
+  background-color: rgba(0, 0, 0, 0.404);
 }
 .setails-wrapper {
   display: -ms-grid;
