--- a/assets/css/arch-shelf.less
+++ b/assets/css/arch-shelf.less
@@ -5724,14 +5724,14 @@
 }
 
 .div-block-23385:hover {
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(transparent),
-    to(rgba(0, 0, 0, 0.75))
-  );
-  background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.75));
+  // background-image: -webkit-gradient(
+  //   linear,
+  //   left top,
+  //   left bottom,
+  //   from(transparent),
+  //   to(rgba(0, 0, 0, 0.75))
+  // );
+  // background-color: rgba(0, 0, 0, 0.233);
 }
 
 .div-block-23386 {
